--- a/bhargavi/src/app/app.component.html
+++ b/bhargavi/src/app/app.component.html
@@ -1,2 +1,14 @@
- <h1>Hello Badri</h1>
+ <h1>Hello Kushi</h1>
+  
  <app-rooms></app-rooms>
+
+
+ <!-- <div [ngSwitch]="role">
+    <div *ngSwitchCase="'User'">Welcome User!</div>
+    <div *ngSwitchCase="'Admin'">
+        
+    </div>
+    <div *ngSwitchDefault>
+        You are not authorized to view this page
+    </div>
+ </div> -->
