--- a/bhargavi/src/app/rooms/rooms.component.html
+++ b/bhargavi/src/app/rooms/rooms.component.html
@@ -12,32 +12,7 @@
  <!-- {{roomList | json}} -->
 
  <div *ngIf=" rooms.availableRooms >0" >
-    Rooms List 
-     <!-- {{roomList}} -->
-     <table>
-        <tr>
-        <th>Index</th>
-        <th>Even/Odd</th>
-        <th>RoomNumber</th>
-        <th>Room Type</th>
-        <th>Room price</th>
-        <th>Room Amenities</th>
-        <th>Checkin Time</th>
-        <th>Rating</th>
-        </tr>
-
-        <tr [ngClass]="e ? 'even' : 'odd' "
-        *ngFor="let room of roomList | slice : 0:5; let e=even; let o=odd; let i=index">
-            <th>{{i}}</th>
-            <td>{{e ? "Even" : "Odd"}}</td>
-            <td>{{room.roomNumber}}</td>
-            <td>{{room.roomType}}</td>
-            <td>{{room.price | currency : 'INR'}}</td>
-            <td>{{room. amenities | titlecase}}</td>
-            <td>{{room.checkinTime | date : 'short'}}</td>
-            <td>{{room.rating | number:'1.0-0'}}</td>
-        </tr>
-     </table>
+    <app-rooms-list  [room] ="roomList"  (selectedRoom)="selectRoom($event)"></app-rooms-list>
  </div>
 
  <button (click)="toggle()">Toggle</button>
