--- a/bhargavi/src/app/rooms/rooms.component.html
+++ b/bhargavi/src/app/rooms/rooms.component.html
@@ -1,4 +1,6 @@
- <h1>Welcome to {{hotelName}}</h1>
+ 
+ <app-header></app-header>
+ <!-- <h1>Welcome to {{hotelName}}</h1> -->
 <div [hidden]="hideRooms">
  Number of Rooms:
  <div [ngStyle]="{'color': rooms.availableRooms ? 'darkgreen' : 'red' }"
