--- a/bhargavi/src/app/app.component.html
+++ b/bhargavi/src/app/app.component.html
@@ -2,6 +2,8 @@
   
  <app-rooms></app-rooms>
 
+ <div #name></div>
+
 
  <!-- <div [ngSwitch]="role">
     <div *ngSwitchCase="'User'">Welcome User!</div>
@@ -11,4 +13,8 @@
     <div *ngSwitchDefault>
         You are not authorized to view this page
     </div>
+ </div> -->
+
+ <!-- <div>
+    <ng-template #user ></ng-template>
  </div> -->
