--- a/bhargavi/src/app/app.component.html
+++ b/bhargavi/src/app/app.component.html
@@ -1,14 +1,15 @@
  <h1>Hello Kushi</h1>
   
  <!-- <app-rooms></app-rooms> -->
+ <app-rooms></app-rooms>
 
- <app-container>
+ <!-- <app-container>
    <app-rooms></app-rooms>
    <app-employee></app-employee>
     <h1>This is from ng-content</h1>
  </app-container>
 
- <div #name></div>
+ <div #name></div> -->
 
 
  <!-- <div [ngSwitch]="role">
